--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-app-auth": "^6.4.3",
     "react-native-reanimated": "~2.14.4"
   },
   "devDependencies": {
