--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -51,3 +51,8 @@ expo.webp.enabled=true
 # Enable animated webp support (~3.4 MB increase)
 # Disabled by default because iOS doesn't support animated webp
 expo.webp.animated=false
+
+MYAPP_UPLOAD_STORE_FILE=dtc-lab-scanner.keystore
+MYAPP_UPLOAD_KEY_ALIAS=DTC_Scanner_Key
+MYAPP_UPLOAD_STORE_PASSWORD=RhubarbMilkshake76
+MYAPP_UPLOAD_KEY_PASSWORD=RhubarbMilkshake76
