--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.0",
+    "react-native-vision-camera": "^2.15.4",
     "react-native-webview": "^13.2.3"
   },
   "devDependencies": {
