Install image crop picker and setup

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -124,6 +124,7 @@ android {
         manifestPlaceholders = [
             appAuthRedirectScheme: "io.identityserver.demo"
         ]
+        vectorDrawables.useSupportLibrary = true
     }
 
     splits {
