--- a/android/build.gradle
+++ b/android/build.gradle
@@ -37,6 +37,7 @@ allprojects {
 
         google()
         mavenCentral()
+        maven { url 'https://maven.google.com' }
         maven { url 'https://www.jitpack.io' }
     }
 }
