--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.14",
-    "react-native-app-auth": "^7.1.0",
     "react-native-config": "^1.5.1",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-get-random-values": "^1.9.0",
     "react-native-image-crop-picker": "^0.40.0",
+    "react-native-msal": "^4.0.4",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.0",
